--- a/html/assets/css/elements.css
+++ b/html/assets/css/elements.css
@@ -1,6 +1,7 @@
 *{
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 html{
   font-size: 62.5%;
@@ -55,6 +56,7 @@ p{
   overflow-x: auto;
 }
 table{
+  min-width: 36rem;
   width: 100%;
   border-collapse: collapse;
 }
@@ -63,18 +65,26 @@ table td, table th{
   padding: 1rem;
   text-align: center;
   border: 0.1rem solid var(--bg-color);
+  font-size: 1.7rem;
 }
-caption{
+table caption{
   text-align: left;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-style: italic;
+  margin-bottom: 1rem;
 }
 tfoot td{
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   background: var(--light-grey);
   text-align: right;
 }
 thead th{
   background: var(--light-grey);
   border: 1px solid var(--bg-color);
+}
+button:hover{
+  color: white;
+  background-color: dimgray;
+  border: 1rem solid white;
+  border-radius: 5px;
 }
