--- a/html/assets/css/styles.css
+++ b/html/assets/css/styles.css
@@ -24,21 +24,23 @@
   min-height: 100vh;
   text-align: center;
 }
-.title{
+/* .title{
   margin-top: -11rem;
-}
+} */
 .grid-one-content{
   display: flex;
   flex-flow: column wrap;
   justify-content: center;
   height: 100vh;
 }
+
 .grid-main-heading{
-padding-top: 6rem;  
-margin-bottom: 1rem;
+  font-size: 5rem;
+  margin-top:5rem;
+  margin-bottom: 1rem;
 }
 .grid-description{
-  padding-bottom: 5rem;
+  padding-bottom: 0rem;
 }
 .grid{
   display:grid;
@@ -60,14 +62,14 @@ margin-bottom: 1rem;
   position: absolute;
   font-size: 8rem;
   font-style: italic;
-  top: -7rem;
+  top: -6rem;
   left: -3rem;
   transform:rotate(20deg) ;
 }
 .gallery-img{
   width: 100%;
-  max-width: 36rem;
-  max-height: 36rem;
+  max-width: 33rem;
+  max-height: 33rem;
   overflow: hidden;
 }
 .gallery-img img{
@@ -75,4 +77,62 @@ margin-bottom: 1rem;
 }
 .gallery-img img:hover{
   transform: rotate(10deg) translate(-3%, 3%) scale(1.3);
+}
+.contact-form{
+  grid-column: span 2;
+}
+.contact-form .form-grid{
+  border: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap:var(--gap);
+}
+.form-grid legend {
+  font-style: italic;
+  font-size: 1.6rem; 
+  margin-bottom: 1.5rem;
+}
+.form-group{
+  flex: 1 1 32rem;
+}
+.form-group label{
+  display: block;
+  margin-bottom: 1rem;
+}
+.form-group input, .form-group textarea{
+  border: none;
+  background: var(--primary-color);
+  padding:1rem 1.5rem;
+  width: 100%;
+  font-size: 1.6rem;
+  outline: none;
+}
+.form-group span{
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  width:100%;
+  font-size: 1.6rem;
+}
+.form-group button{
+  padding: 0.5rem;
+  width: 10rem;
+  margin-right: 1rem;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  transition: all 300ms ease-in-out;
+}
+
+.footer{
+  text-align: center;
+  font-size: 1.6rem;
+}
+.footer a{
+  color: inherit;
+}
+.footer p{
+  margin: 0;
+  padding: -3rem;
 }
